# django-practice

dj_ninja/async/: README.md  pyproject.toml
dj_ninja/async/config/: settings.py  urls.py
dj_ninja/async/sample/: views.py
dj_ninja/notebooks/: pyproject.toml  validattion_time.ipynb
